--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^7.0.1",
     "@tanstack/react-query": "^5.71.5",
     "@types/node": "^22.14.0",
+    "date-fns": "^4.1.0",
     "playwright": "^1.51.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
