--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 VITE_ENVIRONMENT=development
+
+VITE_API_DEV_URL=http://localhost:3000/api/v1/scrapers/hacker-news-scraper/
+VITE_API_PREPROD_URL=https://nestjs-mega-backend-preprod-420ae4c0c109.herokuapp.com/api/v1/scrapers/hacker-news-scraper/
+VITE_API_PROD_URL=https://nestjs-mega-backend-prod-893a099fba68.herokuapp.com/api/v1/scrapers/hacker-news-scraper/
